@@ -714,8 +714,12 @@ public class WikiUtil {
 			throw new WikiException(new WikiMessage("common.exception.pseudotopic", name));
 		}
 		WikiLink wikiLink = LinkUtil.parseWikiLink(name);
-		String namespace = wikiLink.getNamespace();
-		if (namespace != null && namespace.toLowerCase().trim().equals(NamespaceHandler.NAMESPACE_SPECIAL.toLowerCase())) {
+		String namespace = StringUtils.trimToNull(wikiLink.getNamespace());
+		String article = StringUtils.trimToNull(wikiLink.getArticle());
+		if (StringUtils.startsWith(namespace, "/") || StringUtils.startsWith(article, "/")) {
+			throw new WikiException(new WikiMessage("common.exception.name", name));
+		}
+		if (namespace != null && namespace.toLowerCase().equals(NamespaceHandler.NAMESPACE_SPECIAL.toLowerCase())) {
 			throw new WikiException(new WikiMessage("common.exception.name", name));
 		}
 		Matcher m = WikiUtil.INVALID_TOPIC_NAME_PATTERN.matcher(name);
